--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-    <link rel="stylesheet" href="../LANDINGPAGE_NIRMALKUMAR/CSS/Style.css" />
+    <link rel="stylesheet" href="../LANDINGPAGE_NIRMALKUMAR/Style.css" />
 </head>
 
 <body>
@@ -570,16 +570,16 @@
 
         <div class="screenshots-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 15px; margin-bottom: 30px;">
             <div class="screenshot-placeholder" style="overflow: hidden; border-radius: 12px; box-shadow: 0 8px 25px rgba(0,0,0,0.5);">
-                <img src="../LANDINGPAGE_NIRMALKUMAR/IMG/Screenshot 2025-08-24 185944.png" alt="Screenshot 1" style="width: 100%; display: block;">
+                <img src="../LANDINGPAGE_NIRMALKUMAR/IMG/1_whatsapp.png" alt="Screenshot 1" style="width: 100%; display: block;">
             </div>
             <div class="screenshot-placeholder" style="overflow: hidden; border-radius: 12px; box-shadow: 0 8px 25px rgba(0,0,0,0.5);">
-                <img src="../LANDINGPAGE_NIRMALKUMAR/IMG/Screenshot 2025-08-24 190043.png" alt="Screenshot 2" style="width: 100%; display: block;">
+                <img src="../LANDINGPAGE_NIRMALKUMAR/IMG/2_whatsapp.png" alt="Screenshot 2" style="width: 100%; display: block;">
             </div>
             <div class="screenshot-placeholder" style="overflow: hidden; border-radius: 12px; box-shadow: 0 8px 25px rgba(0,0,0,0.5);">
-                <img src="../LANDINGPAGE_NIRMALKUMAR/IMG/Screenshot 2025-08-24 190104.png" alt="Screenshot 3" style="width: 100%; display: block;">
+                <img src="../LANDINGPAGE_NIRMALKUMAR/IMG/3_whatsapp.png" alt="Screenshot 3" style="width: 100%; display: block;">
             </div>
             <div class="screenshot-placeholder" style="overflow: hidden; border-radius: 12px; box-shadow: 0 8px 25px rgba(0,0,0,0.5);">
-                <img src="../LANDINGPAGE_NIRMALKUMAR/IMG/Screenshot 2025-08-24 190128.png" alt="Screenshot 4" style="width: 100%; display: block;">
+                <img src="../LANDINGPAGE_NIRMALKUMAR/IMG/4_whatsapp.png" alt="Screenshot 4" style="width: 100%; display: block;">
             </div>
         </div>
 
