--- a/index.html
+++ b/index.html
@@ -570,16 +570,16 @@
 
         <div class="screenshots-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 15px; margin-bottom: 30px;">
             <div class="screenshot-placeholder" style="overflow: hidden; border-radius: 12px; box-shadow: 0 8px 25px rgba(0,0,0,0.5);">
-                <img src="./LANDINGPAGE_NIRMALKUMAR/IMG/1_whatsapp.png" alt="Screenshot 1" style="width: 100%; display: block;">
+                <img src="./IMG/4_whatsapp.png" alt="Screenshot 1" style="width: 100%; display: block;">
             </div>
             <div class="screenshot-placeholder" style="overflow: hidden; border-radius: 12px; box-shadow: 0 8px 25px rgba(0,0,0,0.5);">
-                <img src="./LANDINGPAGE_NIRMALKUMAR/IMG/2_whatsapp.png" alt="Screenshot 2" style="width: 100%; display: block;">
+                <img src="./IMG/3_whatsapp.png" alt="Screenshot 2" style="width: 100%; display: block;">
             </div>
             <div class="screenshot-placeholder" style="overflow: hidden; border-radius: 12px; box-shadow: 0 8px 25px rgba(0,0,0,0.5);">
-                <img src="./LANDINGPAGE_NIRMALKUMAR/IMG/3_whatsapp.png" alt="Screenshot 3" style="width: 100%; display: block;">
+                <img src="./IMG/2_whatsapp.png" alt="Screenshot 3" style="width: 100%; display: block;">
             </div>
             <div class="screenshot-placeholder" style="overflow: hidden; border-radius: 12px; box-shadow: 0 8px 25px rgba(0,0,0,0.5);">
-                <img src="./LANDINGPAGE_NIRMALKUMAR/IMG/4_whatsapp.png" alt="Screenshot 4" style="width: 100%; display: block;">
+                <img src="./IMG/1_whatsapp.png" alt="Screenshot 4" style="width: 100%; display: block;">
             </div>
         </div>
 
