--- a/index.html
+++ b/index.html
@@ -56,8 +56,10 @@
                 <div class="col-md-10 text-center">
                     <div class="video-container">
                         <iframe
-                            src="https://www.youtube.com/embed/vi7YP9aRlpw?autoplay=0&mute=0&loop=1&playlist=u63aFsnOU6k"
-                            title="Digital Marketing" allow="autoplay; encrypted-media" allowfullscreen>
+                            src="https://www.youtube.com/embed/vi7YP9aRlpw?autoplay=1&mute=0&loop=1&playlist=u63aFsnOU6k"
+                            title="Digital Marketing" width="800" height="450"
+                            style="border-radius: 15px; box-shadow: 0 10px 30px rgba(0,0,0,0.5);"
+                            allow="autoplay; encrypted-media" allowfullscreen>
                         </iframe>
                     </div>
                 </div>
@@ -518,29 +520,33 @@
 
     </section>
 
-<section class="testimonial-section" style="background: #f5f5f5; padding: 60px 20px; display: flex; justify-content: center;">
-    <div class="container" style="max-width: 1100px; background: linear-gradient(135deg, #48bfe3, #56cfe1, #64dfdf, #72efdd, #80ffdb); 
+    <section class="testimonial-section"
+        style="background: #f5f5f5; padding: 60px 20px; display: flex; justify-content: center;">
+        <div class="container"
+            style="max-width: 1100px; background: linear-gradient(135deg, #48bfe3, #56cfe1, #64dfdf, #72efdd, #80ffdb); 
         padding: 40px; border-radius: 25px; box-shadow: 0 20px 50px rgba(0,0,0,0.5); color: #fff; text-align: center; position: relative;">
 
-        <!-- Header -->
-        <h2 style="font-size: 2rem; font-weight: bold; margin-bottom: 15px; color: #7400b8; text-shadow: 0 3px 8px rgba(0,0,0,0.5);">
-            PLUS 100’S OF VIDEO TESTIMONIALS & CASE STUDIES
-        </h2>
-        <p style="font-size: 1.1rem; font-weight: 600; margin-bottom: 30px; color: #ffcc00;">
-            WHICH WILL MAKE OUR WEBSITE TO OPEN TOMORROW 🙂
-        </p>
+            <!-- Header -->
+            <h2
+                style="font-size: 2rem; font-weight: bold; margin-bottom: 15px; color: #7400b8; text-shadow: 0 3px 8px rgba(0,0,0,0.5);">
+                PLUS 100’S OF VIDEO TESTIMONIALS & CASE STUDIES
+            </h2>
+            <p style="font-size: 1.1rem; font-weight: 600; margin-bottom: 30px; color: #ffcc00;">
+                WHICH WILL MAKE OUR WEBSITE TO OPEN TOMORROW 🙂
+            </p>
 
-        <!-- Video Embed -->
-        <div style="margin-bottom: 30px;">
-           <iframe src="https://www.loom.com/embed/448fbb162b0a4dbf92fa329cc6c084ae?sid=41f013c2-da9f-4f2c-8d65-233dbc9cedf7"  
-        title="Digital Marketing Testimonial" 
-        style="width: 100%; max-width: 800px; height: 400px; border-radius: 15px; box-shadow: 0 10px 30px rgba(0,0,0,0.5);" 
-        allow="autoplay; encrypted-media" allowfullscreen>
-</iframe>
-        </div>
+            <!-- Video Embed -->
+            <div style="margin-bottom: 30px;">
+                <iframe
+                    src="https://www.loom.com/embed/448fbb162b0a4dbf92fa329cc6c084ae?sid=41f013c2-da9f-4f2c-8d65-233dbc9cedf7"
+                    title="Digital Marketing Testimonial"
+                    style="width: 100%; max-width: 800px; height: 400px; border-radius: 15px; box-shadow: 0 10px 30px rgba(0,0,0,0.5);"
+                    allow="autoplay; encrypted-media" allowfullscreen>
+                </iframe>
+            </div>
 
-        <!-- CTA Button -->
-        <a href="https://pages.razorpay.com/pl_QjTa7ndyyUwnQL/view" target="_blank" class="cta-button" style="
+            <!-- CTA Button -->
+            <a href="https://pages.razorpay.com/pl_QjTa7ndyyUwnQL/view" target="_blank" class="cta-button" style="
             display: inline-block;
             padding: 18px 30px;
             background: #57cc99ff;
@@ -552,45 +558,55 @@
             text-decoration: none;
             transition: all 0.3s ease;
             margin-bottom: 20px;
-        " onmouseover="this.style.transform='translateY(-3px) scale(1.05)'; this.style.boxShadow='0 0 35px rgba(255,204,0,1)';" 
-          onmouseout="this.style.transform='translateY(0) scale(1)'; this.style.boxShadow='0 0 25px rgba(255,204,0,0.9)';">
-            🚀 Click Here to Start Your ₹1,00,000/Month Journey Today
-        </a>
-        <p class="animated-text" style="margin-top: 10px; font-size: 1rem; font-weight: 500; color: #48bfe3;">
-            (Only 100 Days to Results Or 100% Money Back)
-        </p>
+        " onmouseover="this.style.transform='translateY(-3px) scale(1.05)'; this.style.boxShadow='0 0 35px rgba(255,204,0,1)';"
+                onmouseout="this.style.transform='translateY(0) scale(1)'; this.style.boxShadow='0 0 25px rgba(255,204,0,0.9)';">
+                🚀 Click Here to Start Your ₹1,00,000/Month Journey Today
+            </a>
+            <p class="animated-text" style="margin-top: 10px; font-size: 1rem; font-weight: 500; color: #48bfe3;">
+                (Only 100 Days to Results Or 100% Money Back)
+            </p>
 
-        <!-- WhatsApp Screenshots -->
-        <h3 style="font-size: 1.8rem; font-weight: bold; color: #7400b8; margin: 25px 0 15px; text-shadow: 0 2px 6px rgba(0,0,0,0.5);">
-            OH WAITTTTT!!!!!
-        </h3>
-        <p style="font-size: 1rem; font-weight: 600; margin-bottom: 20px; color: #ffcc00;">
-            Check Out The Recent Screenshots Straight From Our 100 Days Challenge Whatsapp Group:
-        </p>
+            <!-- WhatsApp Screenshots -->
+            <h3
+                style="font-size: 1.8rem; font-weight: bold; color: #7400b8; margin: 25px 0 15px; text-shadow: 0 2px 6px rgba(0,0,0,0.5);">
+                OH WAITTTTT!!!!!
+            </h3>
+            <p style="font-size: 1rem; font-weight: 600; margin-bottom: 20px; color: #ffcc00;">
+                Check Out The Recent Screenshots Straight From Our 100 Days Challenge Whatsapp Group:
+            </p>
 
-        <div class="screenshots-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 15px; margin-bottom: 30px;">
-            <div class="screenshot-placeholder" style="overflow: hidden; border-radius: 12px; box-shadow: 0 8px 25px rgba(0,0,0,0.5);">
-                <img src="./IMG/4_whatsapp.png" alt="Screenshot 1" style="width: 100%; display: block;">
+            <div class="screenshots-grid"
+                style="display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 15px; margin-bottom: 30px;">
+                <div class="screenshot-placeholder"
+                    style="overflow: hidden; border-radius: 12px; box-shadow: 0 8px 25px rgba(0,0,0,0.5);">
+                    <img src="./IMG/4_whatsapp.png" alt="Screenshot 1" style="width: 100%; display: block;">
+                </div>
+                <div class="screenshot-placeholder"
+                    style="overflow: hidden; border-radius: 12px; box-shadow: 0 8px 25px rgba(0,0,0,0.5);">
+                    <img src="./IMG/3_whatsapp.png" alt="Screenshot 2" style="width: 100%; display: block;">
+                </div>
+                <div class="screenshot-placeholder"
+                    style="overflow: hidden; border-radius: 12px; box-shadow: 0 8px 25px rgba(0,0,0,0.5);">
+                    <img src="./IMG/2_whatsapp.png" alt="Screenshot 3" style="width: 100%; display: block;">
+                </div>
+                <div class="screenshot-placeholder"
+                    style="overflow: hidden; border-radius: 12px; box-shadow: 0 8px 25px rgba(0,0,0,0.5);">
+                    <img src="./IMG/1_whatsapp.png" alt="Screenshot 4" style="width: 100%; display: block;">
+                </div>
             </div>
-            <div class="screenshot-placeholder" style="overflow: hidden; border-radius: 12px; box-shadow: 0 8px 25px rgba(0,0,0,0.5);">
-                <img src="./IMG/3_whatsapp.png" alt="Screenshot 2" style="width: 100%; display: block;">
-            </div>
-            <div class="screenshot-placeholder" style="overflow: hidden; border-radius: 12px; box-shadow: 0 8px 25px rgba(0,0,0,0.5);">
-                <img src="./IMG/2_whatsapp.png" alt="Screenshot 3" style="width: 100%; display: block;">
-            </div>
-            <div class="screenshot-placeholder" style="overflow: hidden; border-radius: 12px; box-shadow: 0 8px 25px rgba(0,0,0,0.5);">
-                <img src="./IMG/1_whatsapp.png" alt="Screenshot 4" style="width: 100%; display: block;">
-            </div>
-        </div>
 
-        <!-- Final Explanatory Text -->
-        <p style="font-size: 0.95rem; line-height: 1.6; max-width: 850px; margin: auto; color: #7400b8; margin-bottom: 25px;">
-            If You Have Read To This Point You Are Obviously Interested In Changing Your Current Life By Making At Least ₹1,00,000/Month…  
-            <br><br>
-            …So, listen to me. Even after watching or hearing so many people share their real and bad experiences about joining expensive courses with 0% guarantee & our successful case studies, if you still decide to join now and regret later, that is entirely your choice. Thank You.
-        </p>
+            <!-- Final Explanatory Text -->
+            <p
+                style="font-size: 0.95rem; line-height: 1.6; max-width: 850px; margin: auto; color: #7400b8; margin-bottom: 25px;">
+                If You Have Read To This Point You Are Obviously Interested In Changing Your Current Life By Making At
+                Least ₹1,00,000/Month…
+                <br><br>
+                …So, listen to me. Even after watching or hearing so many people share their real and bad experiences
+                about joining expensive courses with 0% guarantee & our successful case studies, if you still decide to
+                join now and regret later, that is entirely your choice. Thank You.
+            </p>
 
-        <a href="https://pages.razorpay.com/pl_QjTa7ndyyUwnQL/view" target="_blank" class="cta-button" style="
+            <a href="https://pages.razorpay.com/pl_QjTa7ndyyUwnQL/view" target="_blank" class="cta-button" style="
             display: inline-block;
             padding: 18px 30px;
             background: #57cc99ff;
@@ -601,18 +617,20 @@
             box-shadow: 0 0 25px rgba(255, 204, 0, 0.9);
             text-decoration: none;
             transition: all 0.3s ease;
-        " onmouseover="this.style.transform='translateY(-3px) scale(1.05)'; this.style.boxShadow='0 0 35px rgba(255,204,0,1)';" 
-          onmouseout="this.style.transform='translateY(0) scale(1)'; this.style.boxShadow='0 0 25px rgba(255,204,0,0.9)';">
-            🚀 Click Here to Start Your ₹1,00,000/Month Journey Today
-        </a>
-        <p style="font-size: 1rem; font-weight: 500; margin-top: 15px; color: #7400b8;">
-            Questions? <a href="mailto:digitalthpc@gmail.com" style="color: #ffcc00; font-weight: bold; text-decoration: underline;">Email Me</a> and I will personally answer them.
-        </p>
+        " onmouseover="this.style.transform='translateY(-3px) scale(1.05)'; this.style.boxShadow='0 0 35px rgba(255,204,0,1)';"
+                onmouseout="this.style.transform='translateY(0) scale(1)'; this.style.boxShadow='0 0 25px rgba(255,204,0,0.9)';">
+                🚀 Click Here to Start Your ₹1,00,000/Month Journey Today
+            </a>
+            <p style="font-size: 1rem; font-weight: 500; margin-top: 15px; color: #7400b8;">
+                Questions? <a href="mailto:digitalthpc@gmail.com"
+                    style="color: #ffcc00; font-weight: bold; text-decoration: underline;">Email Me</a> and I will
+                personally answer them.
+            </p>
 
-    </div>
-</section>
+        </div>
+    </section>
 
-<footer style="
+    <footer style="
     background: linear-gradient(135deg, #7400b8, #6930c3, #5e60ce, #5390d9, #48bfe3);
     padding: 40px 20px;
     color: #fff;
@@ -622,29 +640,33 @@
     box-shadow: 0 -5px 30px rgba(116,0,184,0.6), 0 -5px 40px rgba(72,191,227,0.4);
     font-family: 'Roboto', sans-serif;
 ">
-    <div style="max-width: 1000px; margin: auto;">
-        <p style="font-size: 1rem; margin-bottom: 20px; text-shadow: 0 2px 8px rgba(0,0,0,0.3);">
-            &copy; 2025 The High Paying Clients. All Rights Reserved.
-        </p>
-        <div style="display: flex; justify-content: center; flex-wrap: wrap; gap: 20px; margin-bottom: 20px;">
-            <a href="privacy.html" target="_blank" style="color: #ffcc00; font-weight: bold; text-decoration: none; transition: all 0.3s ease;"
-               onmouseover="this.style.color='#fff'; this.style.textShadow='0 0 10px #ffcc00';"
-               onmouseout="this.style.color='#ffcc00'; this.style.textShadow='none';">Privacy Policy</a>
-            <a href="terms.html" target="_blank" style="color: #ffcc00; font-weight: bold; text-decoration: none; transition: all 0.3s ease;"
-               onmouseover="this.style.color='#fff'; this.style.textShadow='0 0 10px #ffcc00';"
-               onmouseout="this.style.color='#ffcc00'; this.style.textShadow='none';">Terms & Conditions</a>
-            <a href="contact.html" target="_blank" style="color: #ffcc00; font-weight: bold; text-decoration: none; transition: all 0.3s ease;"
-               onmouseover="this.style.color='#fff'; this.style.textShadow='0 0 10px #ffcc00';"
-               onmouseout="this.style.color='#ffcc00'; this.style.textShadow='none';">Contact Us</a>
-            <a href="refund.html" target="_blank" style="color: #ffcc00; font-weight: bold; text-decoration: none; transition: all 0.3s ease;"
-               onmouseover="this.style.color='#fff'; this.style.textShadow='0 0 10px #ffcc00';"
-               onmouseout="this.style.color='#ffcc00'; this.style.textShadow='none';">Refund / Cancellation</a>
+        <div style="max-width: 1000px; margin: auto;">
+            <p style="font-size: 1rem; margin-bottom: 20px; text-shadow: 0 2px 8px rgba(0,0,0,0.3);">
+                &copy; 2025 The High Paying Clients. All Rights Reserved.
+            </p>
+            <div style="display: flex; justify-content: center; flex-wrap: wrap; gap: 20px; margin-bottom: 20px;">
+                <a href="privacy.html" target="_blank"
+                    style="color: #ffcc00; font-weight: bold; text-decoration: none; transition: all 0.3s ease;"
+                    onmouseover="this.style.color='#fff'; this.style.textShadow='0 0 10px #ffcc00';"
+                    onmouseout="this.style.color='#ffcc00'; this.style.textShadow='none';">Privacy Policy</a>
+                <a href="terms.html" target="_blank"
+                    style="color: #ffcc00; font-weight: bold; text-decoration: none; transition: all 0.3s ease;"
+                    onmouseover="this.style.color='#fff'; this.style.textShadow='0 0 10px #ffcc00';"
+                    onmouseout="this.style.color='#ffcc00'; this.style.textShadow='none';">Terms & Conditions</a>
+                <a href="contact.html" target="_blank"
+                    style="color: #ffcc00; font-weight: bold; text-decoration: none; transition: all 0.3s ease;"
+                    onmouseover="this.style.color='#fff'; this.style.textShadow='0 0 10px #ffcc00';"
+                    onmouseout="this.style.color='#ffcc00'; this.style.textShadow='none';">Contact Us</a>
+                <a href="refund.html" target="_blank"
+                    style="color: #ffcc00; font-weight: bold; text-decoration: none; transition: all 0.3s ease;"
+                    onmouseover="this.style.color='#fff'; this.style.textShadow='0 0 10px #ffcc00';"
+                    onmouseout="this.style.color='#ffcc00'; this.style.textShadow='none';">Refund / Cancellation</a>
+            </div>
+            <p style="font-size: 0.9rem; color: #f0e5ff; text-shadow: 0 1px 5px rgba(0,0,0,0.2);">
+                Designed & Developed by The High Paying Clients Team
+            </p>
         </div>
-        <p style="font-size: 0.9rem; color: #f0e5ff; text-shadow: 0 1px 5px rgba(0,0,0,0.2);">
-            Designed & Developed by The High Paying Clients Team
-        </p>
-    </div>
-</footer>
+    </footer>
 
 
 </body>
